# airedteam-rl

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  config.example.json  pyproject.toml  reward_server.py  reward_server_hybrid.py  reward_server_llm_judge.py
examples/: infer.py  run_training.py
src/tinker_redteam_rl/: __init__.py  cli.py  config.py  data.py  prompting.py  reward.py  rl_loop.py  trainer.py
tests/: test_config.py
