[project]
name = "tinker-redteam-rl"
version = "0.1.0"
description = "Reusable GRPO-style safety red-teaming RL loop for the Tinker API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Your Team" }
]
dependencies = [
  "tinker>=0.9.0",
  "tinker_cookbook>=0.1.0",
  "datasets",
  "torch",
  "tqdm",
  "requests",
  "tenacity",
  "chz",
]

[project.scripts]
tinker-redteam-train = "tinker_redteam_rl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinker_redteam_rl"]
